//python -m grpc_tools.protoc -I . --python_out=. --grpc_python_out=. enclave.proto
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative enclave.proto
syntax = "proto3";

option go_package = "/enclavepb";

package enclavepb;


service Enclave {
    rpc ReceiveOnboardTxn(OnboardTxn) returns (Status) {}
    rpc ReceiveOffboardTxn(OffboardTxn) returns (Status) {}
}

message Empty {}

message OnboardTxn {
    string blockHash = 1;
    string txnHash = 2;
    string identification = 3;
    int64 batch = 4;
}

message Status {
    string status = 1;
}

message OffboardTxn {
    string blockHash = 1;
    string txnHash = 2;
    string identification = 3;
    int64 batch = 4;
}

